Refactor tilt-scroll threads to attempt to fix jerkiness in ICS